added live site settings

--- a/config/live-site.yml
+++ b/config/live-site.yml
@@ -1,9 +1,6 @@
-SITENAME: "MYSITE"
-SERVER: "do2.title.dk"
-SSHUSER: "do2"
-SSHPORT: ""
-REPODIR: "/var/git-repos/REPONAME"
-WEBUSERANDGROUP: "do2:do2"
+SITENAME: "ssmetup"
+SERVER: "do1.title.dk"
+SSHUSER: "do1"
+REPODIR: "/var/git-repos/ssmeetup"
 DEPLOY_DONTCHOWN: "1"
 DEPLOY_NOSUDO: "1"
-DEPLOY_COMPOSERPHAR: "1"
