--- a/public/composer.json
+++ b/public/composer.json
@@ -4,7 +4,8 @@
 	"require": {
 		"php": ">=5.3.2",
 		"silverstripe/cms": "3.1.5",
-		"silverstripe/framework": "3.1.5"
+		"silverstripe/framework": "3.1.5",
+		"undefinedoffset/sortablegridfield": "dev-master"
 	},
 	"config": {
 		"process-timeout": 600	
