--- a/public/mysite/_config/config.yml
+++ b/public/mysite/_config/config.yml
@@ -8,6 +8,11 @@ After:
 # See http://doc.silverstripe.org/framework/en/topics/configuration
 # Caution: Indentation through two spaces, not tabs
 
+Image:
+  extensions:
+    - 'Greyscaled'
+
+
 #Zauberfisch demands: no theme folder, so here we go ;)
 #SSViewer:
 #  theme: 'simple'
