--- a/public/composer.json
+++ b/public/composer.json
@@ -5,7 +5,8 @@
 		"php": ">=5.3.2",
 		"silverstripe/cms": "3.1.5",
 		"silverstripe/framework": "3.1.5",
-		"undefinedoffset/sortablegridfield": "dev-master"
+		"undefinedoffset/sortablegridfield": "dev-master",
+		"unclecheese/betterbuttons": "dev-master"
 	},
 	"config": {
 		"process-timeout": 600	
