--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ public/framework/
 public/themes/simple
 public/themes/tutorial
 public/sortablegridfield/
+public/betterbuttons/
 logs
 rotatingbackups
 temp
