--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ public/themes/simple
 public/themes/tutorial
 public/gridfieldextensions/
 public/betterbuttons/
+public/foundationforms/
+public/userforms/
+
 logs
 rotatingbackups
 temp
