--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ public/gridfieldextensions/
 public/betterbuttons/
 public/foundationforms/
 public/userforms/
-
+public/_ss_environment.php
 logs
 rotatingbackups
 temp
