--- a/public/composer.json
+++ b/public/composer.json
@@ -3,8 +3,8 @@
 	"description": "The SilverStripe Framework Installer",
 	"require": {
 		"php": ">=5.3.2",
-		"silverstripe/cms": "3.1.5",
-		"silverstripe/framework": "3.1.5",
+		"silverstripe/cms": "3.1.*",
+		"silverstripe/framework": "3.1.*",
 		"ajshort/silverstripe-gridfieldextensions": "dev-master",
 		"unclecheese/betterbuttons": "dev-master",
 		"silverstripe/userforms": "dev-master",
