photo galleries first version

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ public/gridfieldextensions/
 public/betterbuttons/
 public/foundationforms/
 public/userforms/
+public/gallery/
+public/sortablefile/
+public/uploaddirrules/
+
 public/_ss_environment.php
 logs
 rotatingbackups
