--- a/public/composer.json
+++ b/public/composer.json
@@ -8,7 +8,8 @@
 		"ajshort/silverstripe-gridfieldextensions": "dev-master",
 		"unclecheese/betterbuttons": "dev-master",
 		"silverstripe/userforms": "dev-master",
-		"rywa/silverstripe-foundation-forms": "dev-master"
+		"rywa/silverstripe-foundation-forms": "dev-master",
+		"titledk/silverstripe-gallery": "*"
 	},
 	"config": {
 		"process-timeout": 600	
