added focuspoint module for better focus on gallery holder

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ public/gallery/
 public/sortablefile/
 public/uploaddirrules/
 public/backup/
+public/focuspoint/
+
 scripts/
 public/composer.phar
 
