--- a/public/composer.json
+++ b/public/composer.json
@@ -9,7 +9,8 @@
 		"unclecheese/betterbuttons": "dev-master",
 		"silverstripe/userforms": "dev-master",
 		"rywa/silverstripe-foundation-forms": "dev-master",
-		"titledk/silverstripe-gallery": "*"
+		"titledk/silverstripe-gallery": "*",
+		"jonom/focuspoint": "dev-master"
 	},
 	"config": {
 		"process-timeout": 600	
